archive/templates/secure-namespace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace_name}
  labels:
    environment: ${namespace_environment}
    app: ${app_name}
